Update CHANGELOG.md and remove unused dealParams variables